plugins {
    id 'java-library'
    id 'maven-publish'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(8))
    }
}

group = 'org.freenetproject.mobile'
version = '1.0'

task sourcesJar(type: Jar) {
    from sourceSets.main.allJava
    archiveClassifier.set("sources")
}
task javadocJar(type: Jar, dependsOn: javadoc) {
     archiveClassifier.set("javadoc")
    from javadoc.destinationDir
}

publishing {
      publications {
          mavenAar(MavenPublication) {
                from components.java
                afterEvaluate {
                    artifact javadocJar
                    artifact sourcesJar
                }
          }
     }
}

task jar (type: Jar, overwrite: true) {
    archivesBaseName = "node-wrapper"
}

repositories {
    mavenCentral()
    maven { url 'https://mvn.freenetproject.org' }
    maven { url "https://jitpack.io" }
}

dependencies {
    // Freenet dependencies
    api 'com.github.freenet:fred:build01490'
    api 'org.bouncycastle:bcpkix-jdk15on:1.59'
    api "org.bouncycastle:bcprov-jdk15on:1.59"

    // Extracted from freenet-ext
    api "tanukisoft:wrapper:3.2.3"
    api "org.apache.commons:commons-compress:1.4.1"
    api "org.b1.pack:lzma-sdk-4j:9.22.0"

    // Extracted from freenet-ext, adopted into freenet-mobile group
    api 'com.github.freenet-mobile:mantissa:0.0.3'
    api "com.github.freenet-mobile:lzmajio:0.95.4"
    api 'com.github.freenet-mobile:onion-common:0.0.3'
    api 'com.github.freenet-mobile:onion-fec:0.0.4'
    api 'com.github.freenet-mobile:freenet-ext:0.60.3'

    implementation 'com.github.Bombe:jFCPlib:v0.1.6'
    // End Freenet dependencies

    // Android compatible logging
    implementation 'co.trikita:log:1.1.5'

    // Use JUnit Jupiter API for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'

    testImplementation 'org.mockito:mockito-core:2.28.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:2.28.2'

    // Use JUnit Jupiter Engine for testing.
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

tasks.named('test') {
    // Use junit platform for unit tests.
    useJUnitPlatform()
}
